# api/http/app/admin.pb.go
@@ -31,8 +31,6 @@ type AdminLoginRequest struct {
 	Username string `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty" bind:"form,name=username" validate:"required,non_blank,min_len=2,pattern=#abc123"`
 	// @inject_tag: bind:"form,name=password" validate:"required,non_blank,min_len=4"
 	Password string `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty" bind:"form,name=password" validate:"required,non_blank,min_len=4"`
-	// @inject_tag: bind:"header,name=X-Referer"
-	Referer string `protobuf:"bytes,3,opt,name=referer,proto3" json:"referer,omitempty" bind:"header,name=X-Referer"`
 }
 
 func (x *AdminLoginRequest) Reset() {
@@ -77,13 +75,6 @@ func (x *AdminLoginRequest) GetUsername() string {
 func (x *AdminLoginRequest) GetPassword() string {
 	if x != nil {
 		return x.Password
-	}
-	return ""
-}
-
-func (x *AdminLoginRequest) GetReferer() string {
-	if x != nil {
-		return x.Referer
 	}
 	return ""
 }
@@ -230,110 +221,6 @@ func (x *AdminAddTokenResponse) GetAccessToken() string {
 	return ""
 }
 
-type AdminUploadImageRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	// @inject_tag: bind:"file,name=file" validate:"required,min_len=1"
-	File []byte `protobuf:"bytes,1,opt,name=file,proto3" json:"file,omitempty" bind:"file,name=file" validate:"required,min_len=1"`
-	// @inject_tag: bind:"form,name=key"
-	Key string `protobuf:"bytes,2,opt,name=key,proto3" json:"key,omitempty" bind:"form,name=key"`
-}
-
-func (x *AdminUploadImageRequest) Reset() {
-	*x = AdminUploadImageRequest{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_http_app_admin_proto_msgTypes[4]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *AdminUploadImageRequest) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AdminUploadImageRequest) ProtoMessage() {}
-
-func (x *AdminUploadImageRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_http_app_admin_proto_msgTypes[4]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AdminUploadImageRequest.ProtoReflect.Descriptor instead.
-func (*AdminUploadImageRequest) Descriptor() ([]byte, []int) {
-	return file_http_app_admin_proto_rawDescGZIP(), []int{4}
-}
-
-func (x *AdminUploadImageRequest) GetFile() []byte {
-	if x != nil {
-		return x.File
-	}
-	return nil
-}
-
-func (x *AdminUploadImageRequest) GetKey() string {
-	if x != nil {
-		return x.Key
-	}
-	return ""
-}
-
-type AdminUploadImageResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Key string `protobuf:"bytes,1,opt,name=key,proto3" json:"key,omitempty"`
-}
-
-func (x *AdminUploadImageResponse) Reset() {
-	*x = AdminUploadImageResponse{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_http_app_admin_proto_msgTypes[5]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *AdminUploadImageResponse) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AdminUploadImageResponse) ProtoMessage() {}
-
-func (x *AdminUploadImageResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_http_app_admin_proto_msgTypes[5]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AdminUploadImageResponse.ProtoReflect.Descriptor instead.
-func (*AdminUploadImageResponse) Descriptor() ([]byte, []int) {
-	return file_http_app_admin_proto_rawDescGZIP(), []int{5}
-}
-
-func (x *AdminUploadImageResponse) GetKey() string {
-	if x != nil {
-		return x.Key
-	}
-	return ""
-}
-
 var File_http_app_admin_proto protoreflect.FileDescriptor
 
 var file_http_app_admin_proto_rawDesc = []byte{
@@ -342,54 +229,38 @@ var file_http_app_admin_proto_rawDesc = []byte{
 	0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e,
 	0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x19,
 	0x63, 0x75, 0x73, 0x74, 0x6f, 0x6d, 0x2f, 0x63, 0x6f, 0x6d, 0x6d, 0x6f, 0x6e, 0x2f, 0x61, 0x75,
-	0x74, 0x68, 0x7a, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x65, 0x0a, 0x11, 0x41, 0x64, 0x6d,
+	0x74, 0x68, 0x7a, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x4b, 0x0a, 0x11, 0x41, 0x64, 0x6d,
 	0x69, 0x6e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1a,
 	0x0a, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09,
 	0x52, 0x08, 0x75, 0x73, 0x65, 0x72, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x70, 0x61,
 	0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x70, 0x61,
-	0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x12, 0x18, 0x0a, 0x07, 0x72, 0x65, 0x66, 0x65, 0x72, 0x65,
-	0x72, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x72, 0x65, 0x66, 0x65, 0x72, 0x65, 0x72,
-	0x22, 0x14, 0x0a, 0x12, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65,
-	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x46, 0x0a, 0x14, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41,
-	0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x16,
-	0x0a, 0x06, 0x75, 0x73, 0x65, 0x72, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x06,
-	0x75, 0x73, 0x65, 0x72, 0x69, 0x64, 0x12, 0x16, 0x0a, 0x06, 0x65, 0x78, 0x70, 0x69, 0x72, 0x65,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x65, 0x78, 0x70, 0x69, 0x72, 0x65, 0x22, 0x3a,
-	0x0a, 0x15, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x21, 0x0a, 0x0c, 0x61, 0x63, 0x63, 0x65, 0x73,
-	0x73, 0x5f, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x61,
-	0x63, 0x63, 0x65, 0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x22, 0x3f, 0x0a, 0x17, 0x41, 0x64,
-	0x6d, 0x69, 0x6e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x18, 0x01, 0x20,
-	0x01, 0x28, 0x0c, 0x52, 0x04, 0x66, 0x69, 0x6c, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x22, 0x2c, 0x0a, 0x18, 0x41,
-	0x64, 0x6d, 0x69, 0x6e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x10, 0x0a, 0x03, 0x6b, 0x65, 0x79, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x03, 0x6b, 0x65, 0x79, 0x32, 0xd1, 0x02, 0x0a, 0x0b, 0x41, 0x64,
-	0x6d, 0x69, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x12, 0x5c, 0x0a, 0x05, 0x4c, 0x6f, 0x67,
-	0x69, 0x6e, 0x12, 0x1b, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41, 0x64,
-	0x6d, 0x69, 0x6e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x1c, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e,
-	0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x18, 0x8a,
-	0xb5, 0x18, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x22, 0x0c, 0x2f, 0x61, 0x64, 0x6d, 0x69,
-	0x6e, 0x2f, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x6b, 0x0a, 0x08, 0x41, 0x64, 0x64, 0x54, 0x6f,
-	0x6b, 0x65, 0x6e, 0x12, 0x1e, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41,
-	0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75,
-	0x65, 0x73, 0x74, 0x1a, 0x1f, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41,
-	0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x8a, 0xb5, 0x18, 0x02, 0x08, 0x01, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x12, 0x22, 0x10, 0x2f, 0x61, 0x64, 0x6d, 0x69, 0x6e, 0x2f, 0x61, 0x64, 0x64, 0x5f, 0x74,
-	0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x77, 0x0a, 0x0b, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d,
-	0x61, 0x67, 0x65, 0x12, 0x21, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41,
-	0x64, 0x6d, 0x69, 0x6e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61, 0x67, 0x65, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x22, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70,
-	0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x55, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x49, 0x6d, 0x61,
-	0x67, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x21, 0x8a, 0xb5, 0x18, 0x02,
-	0x08, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15, 0x22, 0x13, 0x2f, 0x61, 0x64, 0x6d, 0x69, 0x6e,
-	0x2f, 0x75, 0x70, 0x6c, 0x6f, 0x61, 0x64, 0x2f, 0x69, 0x6d, 0x61, 0x67, 0x65, 0x42, 0x22, 0x5a,
-	0x20, 0x67, 0x6f, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65,
-	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70, 0x2f, 0x61, 0x70, 0x70, 0x3b, 0x61, 0x70,
-	0x70, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x73, 0x73, 0x77, 0x6f, 0x72, 0x64, 0x22, 0x14, 0x0a, 0x12, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x4c,
+	0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x46, 0x0a, 0x14,
+	0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x75, 0x73, 0x65, 0x72, 0x69, 0x64, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x03, 0x52, 0x06, 0x75, 0x73, 0x65, 0x72, 0x69, 0x64, 0x12, 0x16, 0x0a, 0x06,
+	0x65, 0x78, 0x70, 0x69, 0x72, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x05, 0x52, 0x06, 0x65, 0x78,
+	0x70, 0x69, 0x72, 0x65, 0x22, 0x3a, 0x0a, 0x15, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64,
+	0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x21, 0x0a,
+	0x0c, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73, 0x5f, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x0b, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73, 0x54, 0x6f, 0x6b, 0x65, 0x6e,
+	0x32, 0xd8, 0x01, 0x0a, 0x0b, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72,
+	0x12, 0x5c, 0x0a, 0x05, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x1b, 0x2e, 0x68, 0x74, 0x74, 0x70,
+	0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x68, 0x74, 0x74, 0x70, 0x2e, 0x61, 0x70,
+	0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x4c, 0x6f, 0x67, 0x69, 0x6e, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x18, 0x8a, 0xb5, 0x18, 0x00, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e,
+	0x22, 0x0c, 0x2f, 0x61, 0x64, 0x6d, 0x69, 0x6e, 0x2f, 0x6c, 0x6f, 0x67, 0x69, 0x6e, 0x12, 0x6b,
+	0x0a, 0x08, 0x41, 0x64, 0x64, 0x54, 0x6f, 0x6b, 0x65, 0x6e, 0x12, 0x1e, 0x2e, 0x68, 0x74, 0x74,
+	0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f,
+	0x6b, 0x65, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1f, 0x2e, 0x68, 0x74, 0x74,
+	0x70, 0x2e, 0x61, 0x70, 0x70, 0x2e, 0x41, 0x64, 0x6d, 0x69, 0x6e, 0x41, 0x64, 0x64, 0x54, 0x6f,
+	0x6b, 0x65, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x8a, 0xb5, 0x18,
+	0x02, 0x08, 0x01, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x22, 0x10, 0x2f, 0x61, 0x64, 0x6d, 0x69,
+	0x6e, 0x2f, 0x61, 0x64, 0x64, 0x5f, 0x74, 0x6f, 0x6b, 0x65, 0x6e, 0x42, 0x22, 0x5a, 0x20, 0x67,
+	0x6f, 0x2d, 0x77, 0x65, 0x62, 0x2d, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x2f, 0x61,
+	0x70, 0x69, 0x2f, 0x68, 0x74, 0x74, 0x70, 0x2f, 0x61, 0x70, 0x70, 0x3b, 0x61, 0x70, 0x70, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -404,24 +275,20 @@ func file_http_app_admin_proto_rawDescGZIP() []byte {
 	return file_http_app_admin_proto_rawDescData
 }
 
-var file_http_app_admin_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_http_app_admin_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_http_app_admin_proto_goTypes = []any{
-	(*AdminLoginRequest)(nil),        // 0: http.app.AdminLoginRequest
-	(*AdminLoginResponse)(nil),       // 1: http.app.AdminLoginResponse
-	(*AdminAddTokenRequest)(nil),     // 2: http.app.AdminAddTokenRequest
-	(*AdminAddTokenResponse)(nil),    // 3: http.app.AdminAddTokenResponse
-	(*AdminUploadImageRequest)(nil),  // 4: http.app.AdminUploadImageRequest
-	(*AdminUploadImageResponse)(nil), // 5: http.app.AdminUploadImageResponse
+	(*AdminLoginRequest)(nil),     // 0: http.app.AdminLoginRequest
+	(*AdminLoginResponse)(nil),    // 1: http.app.AdminLoginResponse
+	(*AdminAddTokenRequest)(nil),  // 2: http.app.AdminAddTokenRequest
+	(*AdminAddTokenResponse)(nil), // 3: http.app.AdminAddTokenResponse
 }
 var file_http_app_admin_proto_depIdxs = []int32{
 	0, // 0: http.app.AdminServer.Login:input_type -> http.app.AdminLoginRequest
 	2, // 1: http.app.AdminServer.AddToken:input_type -> http.app.AdminAddTokenRequest
-	4, // 2: http.app.AdminServer.UploadImage:input_type -> http.app.AdminUploadImageRequest
-	1, // 3: http.app.AdminServer.Login:output_type -> http.app.AdminLoginResponse
-	3, // 4: http.app.AdminServer.AddToken:output_type -> http.app.AdminAddTokenResponse
-	5, // 5: http.app.AdminServer.UploadImage:output_type -> http.app.AdminUploadImageResponse
-	3, // [3:6] is the sub-list for method output_type
-	0, // [0:3] is the sub-list for method input_type
+	1, // 2: http.app.AdminServer.Login:output_type -> http.app.AdminLoginResponse
+	3, // 3: http.app.AdminServer.AddToken:output_type -> http.app.AdminAddTokenResponse
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -481,30 +348,6 @@ func file_http_app_admin_proto_init() {
 				return nil
 			}
 		}
-		file_http_app_admin_proto_msgTypes[4].Exporter = func(v any, i int) any {
-			switch v := v.(*AdminUploadImageRequest); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-		file_http_app_admin_proto_msgTypes[5].Exporter = func(v any, i int) any {
-			switch v := v.(*AdminUploadImageResponse); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -512,7 +355,7 @@ func file_http_app_admin_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_http_app_admin_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
